<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_code"
        android:title="@string/code"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_update"
        android:title="@string/check_update"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_feedback"
        android:title="@string/feedback"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_help"
        android:title="@string/help"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:title="@string/about"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_flashlight"
        android:title="@string/flashlight"
        app:showAsAction="never" />
</menu>
