<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_add"
        android:title="@string/list_menu_add"
        android:icon="@drawable/ic_add_black_24dp"
        app:backgroundTint="@android:color/holo_green_light" />
    <item
        android:id="@+id/action_add_more"
        android:title="@string/list_menu_addmore"
        android:icon="@drawable/ic_addlist_black_24dp"
        app:backgroundTint="@android:color/holo_orange_light" />
    <item
        android:id="@+id/action_read"
        android:title="@string/list_menu_load"
        android:icon="@drawable/ic_open_black_24dp"
        app:backgroundTint="@android:color/holo_blue_bright" />
    <item
        android:id="@+id/action_save"
        android:title="@string/list_menu_save"
        android:icon="@drawable/ic_save_black_24dp"
        app:backgroundTint="@android:color/holo_purple" />
    <item
        android:id="@+id/action_clear"
        android:title="@string/list_menu_clear"
        android:icon="@drawable/ic_delete_black_24dp"
        app:backgroundTint="@android:color/holo_red_light" />
</menu>