<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".AboutActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:contentDescription="@string/app_name"
        android:padding="16dp"
        android:scaleType="fitCenter"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/versionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/updateText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_update"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/websiteText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClicked"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/copyright"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <Button
        android:id="@+id/licenseButton"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClicked"
        android:text="@string/view_license"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="24sp" />

</LinearLayout>
